force-app/main/default/objects/Opportunity/fields/Days_in_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Stage__c</fullName>
    <description>Number of days the opportunity has been in the current stage</description>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>Zero</formulaTreatBlanksAs>
    <label>Days in Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>