force-app/main/default/objects/Opportunity/fields/Deal_Velocity__c.field-meta.xml
<CustomField>
    <fullName>Deal_Velocity__c</fullName>
    <description>Average time to close opportunities</description>
    <formula>IF(CreatedDate &lt; TODAY(), (TODAY() - CreatedDate), 0)</formula>
    <formulaTreatBlanksAs>Zero</formulaTreatBlanksAs>
    <label>Deal Velocity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>