force-app/main/default/objects/Opportunity/fields/Performance_Score__c.field-meta.xml
<CustomField>
    <fullName>Performance_Score__c</fullName>
    <description>Calculated performance score based on close probability and deal size</description>
    <formula>CASE(StageName,
        'Prospecting', 10,
        'Qualification', 20,
        'Needs Analysis', 30,
        'Value Proposition', 40,
        'Id. Decision Makers', 50,
        'Proposal/Price Quote', 60,
        'Negotiation/Review', 80,
        'Closed Won', 100,
        0
    )</formula>
    <formulaTreatBlanksAs>Zero</formulaTreatBlanksAs>
    <label>Performance Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>