force-app/main/default/objects/Opportunity/fields/Weighted_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Pipeline__c</fullName>
    <description>Calculated weighted pipeline value</description>
    <formula>Amount * (Performance_Score__c / 100)</formula>
    <formulaTreatBlanksAs>Zero</formulaTreatBlanksAs>
    <label>Weighted Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>